--- a/src/TextAnnotator.scss
+++ b/src/TextAnnotator.scss
@@ -1,4 +1,4 @@
-@import '@recogito/recogito-client-core/themes/default/theme.scss';
+@import 'recogito-client-core-fork/themes/default/theme.scss';
 
 .r6o-annotation {
   background-color:rgba(255, 165, 0, 0.2);
